[package]
name = "nskeyedarchiver_converter"
description = "Convert NSKeyedArchiver encoded plists to human readable formats"
version = "0.1.0"
edition = "2021"
authors = ["Michael Wright <maiklpolkovnikov@gmail.com>"]
repository = "https://github.com/michaelwright235/nskeyedarchiver_converter"
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities", "parser-implementations"]
keywords = ["nskeyedarchiver", "plist", "parser"]
exclude = ["demo.png"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
plist = "1"
thiserror = "1.0"
serde_json = "1.0"

[profile.release]
strip = true
