[package]
name = "nskeyedarchiver_converter"
description = "Convert NSKeyedArchiver encoded plists to human readable formats"
version = "0.1.1"
edition = "2021"
authors = ["Michael Wright <maiklpolkovnikov@gmail.com>"]
repository = "https://github.com/michaelwright235/nskeyedarchiver_converter"
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities", "parser-implementations"]
keywords = ["nskeyedarchiver", "plist", "parser"]
exclude = ["demo.png"]

[features]
default = []
exe_serde_json = ["dep:serde_json"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
plist = "1"
thiserror = "1.0"
serde_json = { version = "1.0", optional = true }

[profile.release]
strip = true
